For the details, see the item about the 'delete-forward-char' command
above.

*** New user option 'composition-break-at-point'.
Setting it to a non-nil value temporarily disables automatic
composition of character sequences at point, and thus makes it easier
to edit such sequences by allowing point to "enter" the sequence.


* Changes in Specialized Modes and Packages in Emacs 29.1

** Minibuffer and Completions

*** The "*Completions*" buffer can now be automatically selected.
To enable this behavior, customize the user option
'completion-auto-select' to t.  Then pressing 'TAB' will switch to the
"*Completions*" buffer when it pops up that buffer.

*** New user option 'completion-wrap-movement'.
When non-nil, the commands 'next-completion' and 'previous-completion'
automatically wrap around on reaching the beginning or the end of
the "*Completions*" buffer.

*** New user option 'completions-sort'.
This option controls the sorting of the completion candidates in
the "*Completions*" buffer.  Available styles are no sorting,
alphabetical (the default), or a custom sort function.

** Isearch and Replace

+++
*** New user option 'char-fold-override' disables default character equivalences.

+++
*** New command 'isearch-emoji-by-name'.
It is bound to 'C-x 8 e RET' during an incremental search.  The
command accepts the Unicode name of an Emoji (for example, "smiling
face" or "heart with arrow"), like 'C-x 8 e e', with minibuffer
completion, and adds the Emoji into the search string.

** New minor mode 'glyphless-display-mode'.
This allows an easy way to toggle seeing all glyphless characters in
the current buffer.

** Registers

+++
*** Buffer names can now be stored in registers.
For instance, to enable jumping to the "*Messages*" buffer with
'C-x r j m':

    (set-register ?m '(buffer . "*Messages*"))

** pixel-fill

+++
*** This is a new package that deals with filling variable-pitch text.

+++
*** New function 'pixel-fill-region'.